--- a/week2/project1/project1.html
+++ b/week2/project1/project1.html
@@ -2,10 +2,12 @@
 <html>
     <head>
         <title>Project 1 - Stylized List</title>
+        <link rel="stylesheet" href="project1.css">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     </head>
     <body>
+        <h2 id="heading">Stylized API List</h2>
         <ul id="list"></ul>
-
         <script src="project1.js"></script>
     </body>
 </html>
