--- a/week4/multipleRequests/multipleRequests2.html
+++ b/week4/multipleRequests/multipleRequests2.html
@@ -7,6 +7,8 @@
     <body>
         <header>
             <h1>Multiple Requests 2</h1>
+            <link rel="stylesheet" type="text/css" href="multipleRequests.css">
+            <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         </header>
         <main>
             <p class="backPage"><a href="multipleRequests.html">Back a Page</a></p>
