--- a/week4/multipleRequests/multipleRequests.html
+++ b/week4/multipleRequests/multipleRequests.html
@@ -3,11 +3,12 @@
     <head>
         <title>Website with Multiple Requests</title>
         <link rel="stylesheet" href="multipleRequests.css">
+        <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
         <header>
-        <h1>Multiple Requests 1</h1>
+        <h1 class="title2">Multiple Requests 1</h1>
         </header>
         <main>
         <p class="nextPage"><a href="multipleRequests2.html">Next Page</a></p>
