--- a/week4/multipleRequests/multipleRequests2.html
+++ b/week4/multipleRequests/multipleRequests2.html
@@ -6,8 +6,9 @@
     </head>
     <body>
         <header>
-            <h1>Multiple Requests 2</h1>
+            <h1 class="title2"></class>Multiple Requests 2</h1>
             <link rel="stylesheet" type="text/css" href="multipleRequests.css">
+            <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         </header>
         <main>
