--- a/week4/AxiosToDo/axiosToDo.html
+++ b/week4/AxiosToDo/axiosToDo.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Axios ToDo List</title>
+        <link rel="stylesheet" type="text/css" href="axiosToDo.css">
     </head>
     <body>
         <script src="https://cdnjs.cloudFlare.com/ajax/libs/axios/0.10.0/axios.js"></script>
