--- a/week4/multipleRequests/multipleRequests.html
+++ b/week4/multipleRequests/multipleRequests.html
@@ -4,16 +4,13 @@
         <title>Website with Multiple Requests</title>
         <link rel="stylesheet" href="multipleRequests.css">
         <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-        <h1 class="title2">Multiple Requests 1</h1>
-        </header>
-        <main>
+        <h1 class="title2">Rick and Morty: Characters</h1>
         <p class="nextPage"><a href="multipleRequests2.html">Next Page</a></p>
-        <button class="btn1">Next Page</button>
-        </main>
+        <button id="btn1">Characters!</button>
         <script src="https://cdnjs.cloudFlare.com/ajax/libs/axios/0.19.0/axios.js"></script>
         <script src="multipleRequests.js"></script>
     </body>
