--- a/week4/multipleRequests/multipleRequests2.html
+++ b/week4/multipleRequests/multipleRequests2.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
     <head>
-            <title>Multiple Requests 2</title>
+        <title>Multiple Requests 2</title>
         <link rel="stylesheet" href="multipleRequests.css">
+        <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <h1 class="title2"></class>Multiple Requests 2</h1>
-            <link rel="stylesheet" type="text/css" href="multipleRequests.css">
-            <link href="https://fonts.googleapis.com/css2?family=Creepster&display=swap" rel="stylesheet">
-            <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-        </header>
-        <main>
-            <p class="backPage"><a href="multipleRequests.html">Back a Page</a></p>
+        <h1 class="title2"></class>Rick and Morty: Episodes</h1>
 
-            <button id="btn2">Back a Page</button>
-        </main>
+        <p class="backPage"><a href="multipleRequests.html">Back a Page</a></p>
+
+        <button id="btn2">Episodes!</button>
         <script src="https://cdnjs.cloudFlare.com/ajax/libs/axios/0.19.0/axios.js"></script>
         <script src="multipleRequests2.js"></script>
     </body>
