--- a/week4/AxiosToDo/axiosToDo.html
+++ b/week4/AxiosToDo/axiosToDo.html
@@ -2,9 +2,11 @@
 <html>
     <head>
         <title>Axios ToDo List</title>
+        <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="axiosToDo.css">
     </head>
     <body>
+        <h3>ToDo List</h3>
         <script src="https://cdnjs.cloudFlare.com/ajax/libs/axios/0.10.0/axios.js"></script>
         <script src="axiosToDo.js"></script>
     </body>
