--- a/week5/AxiosToDo/axiosToDo.html
+++ b/week5/AxiosToDo/axiosToDo.html
@@ -2,18 +2,19 @@
 <html>
     <head>
         <title>Axios ToDo List</title>
+        <link href="https://fonts.googleapis.com/css2?family=Cormorant+Upright:wght@600&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="axiosToDo.css">
     </head>
     <body>
-        <h3>ToDo List</h3>
+        <h3 class="mainTitle">ToDo List</h3>
 
-        <form id="todoForm" name="todoForm">
-            <input name="title" placeholder="Title"/>
-            <input name="description" placeholder="Description"/>
-            <input name="price" placeholder="Price"/>
+        <form class="todoForm" name="todoForm">
+            <input class="title" name="title" placeholder="Title"/>
+            <input class="description" name="description" placeholder="Description"/>
+            <input class="price" type= "number" name="price" placeholder="Price"/>
             <br>
-            <button>Submit</button>
+            <button class="button">Submit</button>
         </form>
 
         <script src="https://cdnjs.cloudFlare.com/ajax/libs/axios/0.10.0/axios.js"></script>
