--- a/week8/finalToDo.html
+++ b/week8/finalToDo.html
@@ -2,15 +2,15 @@
 <html>
     <head>
         <title>Final ToDo List</title>
+        <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Abel&family=Lobster&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="finalToDo.css">
     </head>
     <body>
         <h3 class="mainTitle">ToDo List</h3>
 
         <form class="todoForm" name="todoForm">
-            <input class="title" name="title" placeholder="Title"/>
-            <input class="description" name="description" placeholder="Description"/>
-            <input class="price" type= "number" name="price" placeholder="Price"/>
+            <input class="title" name="title" placeholder="To Do"/>
             <br>
             <button class="button">Submit</button>
         </form>
